# hexlet-flask-example

NewFlaskProject/: .gitignore  Makefile  example.py  pyproject.toml  user_rep.json  user_rep.py
NewFlaskProject/templates/users/: edit.html  index.html  index_session.html  new.html  show.html
