[tool.poetry]
name = "newflaskproject"
version = "0.1.0"
description = ""
authors = ["Aleksei Seleznev <ferfa2@rambler.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
